# hypertrial

./: .gitignore  =2024.2.6.16  MANIFEST.in  PYPI_PUBLISHING.md  README.md  build_package.sh  requirements.txt  run_hypertrial.py  setup.py  test_data.csv
core/: SECURITY.md  SPD_CHECKS.md  __init__.py  batch.py  data.py  main.py  plots.py  security.py  spd.py  strategy_processor.py  user_strategy.py
core/data/: __init__.py  btc_price_data.csv  extract_data.py
core/security/: __init__.py  config.py  resource_monitor.py  strategy_security.py  utils.py
core/strategies/: README.md  __init__.py  strategy_template.py  uniform_dca.py
hypertrial/: __init__.py
hypertrial_venv/: pyvenv.cfg
results/: spd_by_cycle.csv  strategy_summary.csv
results/batch_example/: strategy_files_spd_results.csv  strategy_files_summary.csv
results/custom_files/: strategy_files_spd_results.csv
results/multi_files/: strategy_files_summary.csv
scripts/: release.py  sync_versions.py
stacking_sats/: .flake8  .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
stacking_sats/.github/workflows/: dependency-updates.yml  python-tests.yml
stacking_sats/cli/: __init__.py  main.py  strategy_loader.py  utils.py
stacking_sats/core/: __init__.py  backtest.py  data_loader.py  logger.py
stacking_sats/core/config/: __init__.py  config_manager.py
stacking_sats/data/: btc_data.parquet  data.py
stacking_sats/examples/: __init__.py  debug_functional_model.py  run_comparison.py  run_debug.sh  spd_backtest.py
stacking_sats/strategies/: __init__.py  base_strategy.py
stacking_sats/strategies/examples/: __init__.py  dynamic_allocation_strategy.py
stacking_sats/strategies/templates/: __init__.py  strategy_template.py
stacking_sats/tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_data_loader.py  test_strategy.py
strategies/: external_data_example.py
submit_strategies/: STRATEGIES.md  __init__.py  strategy_template.py
tests/: TESTS.md  __init__.py  test_config.py  test_data_download.py  test_installation.py  test_security.py  test_submit_strategies.py
tests/cli/: test_tutorial_commands.py
tests/core/: __init__.py  test_data_formats.py  test_strategy_performance.py
tests/requirements/: test_validation_default.py
tools/: validate_strategy_imports.py
tutorials/: 3. Submission_Template.ipynb  dynamic_dca_10ma.py  example_strategy.py  example_strategy_2.py  example_strategy_v2.py  failing_example.py
(+4 files in other folders)
